...
  onDecline() {
    this.setState({ showModal: false })
  }

  render() {
    return (
      <Card testID="EditEmployeeScene">
        <EmployeeForm />
        <CardSection>
          <Button onPress={() => this.onButtonPress()}>Save Changes</Button>
        </CardSection>

        <CardSection>
...
